--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "http-server": "^0.12.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
